# sqlextdemo

./: CMakeLists.txt  main.cpp  uuidext.cpp  uuidext.hpp
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
sqlite_extensions/: CMakeLists.txt  uuidext.cpp
tests/: CMakeLists.txt  uuidextTests.cpp
